# mocs-project

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  env.example  init.sql  main.py  pyproject.toml
backend/app/: routers.py
backend/app/core/: app.py  base_models.py  config.py  db.py  db_model.py  logging.py  response_patterns.py  vector_store.py
backend/app/documents/: __init__.py  depends.py  models.py  rag_processor.py  routes.py  schemas.py  service.py
backend/app/rag/: __init__.py  depends.py  embeddings.py  llm.py  prompts.py  routes.py  schemas.py  service.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  DocumentViewer.tsx  QuestionAnswer.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
