[project]
name = "document-processor"
version = "1.0.0"
description = "Document digitization and analysis API"
readme = "README.md"
authors = [{ name = "DevRenatoRodrigues" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.30.0",
    "pytesseract>=0.3.10",
    "pillow>=10.4.0",
    "pdf2image>=1.17.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.2",
    "fastapi-pagination>=0.12.0",
    "loguru>=0.7.3",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",
    "langchain-core>=0.3.12",
    "langchain-text-splitters>=0.3.0",
    "starlette>=0.48.0",
    "openai>=1.54.3",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.9",
    "numpy>=1.26.0",
    "tiktoken>=0.8.0",
    "greenlet>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mypy>=1.11.2",
    "ruff>=0.6.5",
    "types-requests>=2.32.0.20240907",
    "pre-commit>=4.3.0",
]

[project.scripts]
start = "main:main"

[tool.uv]
required-version = ">=0.8.0"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PERF", "N", "RUF"]
ignore = ["E203"]
per-file-ignores = { "alembic/**/*" = ["F401", "F403", "E402"], "tests/**/*" = ["D", "ANN"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "alembic.*"]
disallow_untyped_defs = false
check_untyped_defs = false
